# tpc-plugin-tutorial

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: pre-commit.yml
tpcplugintutorial/: cli.py
